--- a/index.html
+++ b/index.html
@@ -155,49 +155,55 @@
             </div>
         </section>
 
-        <section class="contact-us col-sm-12 d-sm-block">
-          <h1 class="text-center text-danger">Contact Us</h1>
-          <div class="contact-us-container d-flex justify-content-around">
-            <div class="form-container w-50">
-              <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
+        <h1 class="text-center text-danger">Contact Us</h1>
+        <section class="contact-us">
+          <div class="d-flex justify-content-center contact-us-container">
+            <div class="row contact-us-container w-50">
+              <div class="form-container col-sm-12 col-lg-10" style="">
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" style="" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="inputPassword" class="form-label">Password</label>
                   <input type="password" class="form-control" id="inputPassword">
                 </div>
               </div>
-            </div>
-            <div class="form-img img-cont">
-              <img src="./image/burger-3-removebg-preview.png" alt="" srcset="">
+              
+              <div class="form-img col-lg-2 col-sm-12 img-cont">
+                <img src="./image/burger-3-removebg-preview.png" alt="image">
+              </div>
             </div>
           </div>
+          
         </section>
     </main>
-    <footer class="bg-black text-white d-flex justify-content-around">
-      <div class="div-1">
+    <footer class="row bg-black text-white mx-1">
+      <div class="d-flex align-items-center col-sm-3">
+        <div class="div-1 p-5">
+          <li class="list-group-item"> Home </li>
+          <li class="list-group-item"> Menu </li>
+          <li class="list-group-item"> Important links </li>
+          <li class="list-group-item"> Service </li>
+        </div>
+      </div>
+      <div class="div-1 col-sm-3">
         <li class="list-group-item"> Home </li>
         <li class="list-group-item"> Menu </li>
         <li class="list-group-item"> Important links </li>
         <li class="list-group-item"> Service </li>
       </div>
-      <div class="div-1">
+      <div class="div-1 col-sm-3">
         <li class="list-group-item"> Home </li>
         <li class="list-group-item"> Menu </li>
         <li class="list-group-item"> Important links </li>
         <li class="list-group-item"> Service </li>
       </div>
-      <div class="div-1">
-        <li class="list-group-item"> Home </li>
-        <li class="list-group-item"> Menu </li>
-        <li class="list-group-item"> Important links </li>
-        <li class="list-group-item"> Service </li>
-      </div>
-      <div class="div-1">
+      <div class="div-1 col-sm-3">
         <li class="list-group-item"> Home </li>
         <li class="list-group-item"> Menu </li>
         <li class="list-group-item"> Important links </li>
